# TM-Guitar-Midi

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CREDITS.md  INSTALL.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  WEIGHTS_LICENSE.md  pyproject.toml
.github/workflows/: build-plugins.yml  release-draft.yml
cmake/: CopyModelPackage.cmake  VerifyModelPackage.cmake
configs/: complex-dataset-selected-tracks-20260718.json  native-natural-d2w3-activity-qgrid-night.json  native-natural-d2w3-activity-seeds-night.json  native-natural-d2w3-capacity-night.json  native-natural-d2w3-capacity1024-night.json  native-natural-d2w3-hcontrast15-c1024-night.json  native-natural-d2w3-hcontrast15-c512-night.json  native-natural-d2w3-hcontrast15-night.json  native-natural-d2w3-hcontrast15-onset-grid-night.json  native-natural-d2w3-night.json  native-natural-d2w3-onset2048-night.json  native-natural-d2w3-qgrid-night.json  native-natural-d2w3-qhigh-night.json  native-natural-d2w3-qveryhigh-night.json  native-natural-d2w3-seeds-night.json  native-natural-d3w3-hcontrast15-c1024-night.json  native-natural-d3w3-hcontrast15-c2048-night.json  native-natural-d3w3-hcontrast15-c256-rotate-order-night.json  native-natural-d3w3-hcontrast15-c4096-night.json  native-natural-d3w3-hcontrast15-c4096-rotate-order-ablation.json  native-natural-d3w3-hcontrast15-c512-night.json  native-natural-d3w3-hcontrast15-c512-strict-literal-cap-night.json  native-natural-d3w3-hcontrast15-c8192-night.json  native-natural-d3w3-hcontrast15-cattack-night.json  native-natural-d3w3-hcontrast15-hprofile-c512-night.json  native-natural-d3w3-hcontrast15-hprofile-night.json  native-natural-d3w3-hcontrast15-night.json  native-natural-d3w3-hcontrast15-onset-grid-night.json  native-natural-d3w3-night.json  native-natural-hardneg-night.json  native-natural-hardneg-prob-night.json  native-natural-hardneg-weight-night.json  native-natural-night.json
docs/: ARCHITECTURE.md  BUILDING.md  DATASETS.md  TRAINING.md  contiguous_temporal_eval.md  native_dataset_v1.md  native_ensemble_bundle_v1.md
models/strict-cap16-v3/: MODEL_CARD.md  SHA256SUMS
models/strict-cap16-v3/bundles/: cattack-d3.tmgmbundle  hcontrast-d2.tmgmbundle  hcontrast-d3.tmgmbundle  hprofile-d3.tmgmbundle  plain.tmgmbundle
models/strict-cap16-v3/native-frontend/: strict-cap16-v3.tmgmfront
native/: CAUSAL_RESAMPLER.md  CMakeLists.txt  FORMAT.md  STRICT_CAP16_V3.md
native/include/tmgm/: causal_resampler.hpp  cuda_smoke.hpp  dataset.hpp  ensemble_bundle.hpp  ensemble_inference.hpp  model.hpp  strict_cap16_v3.hpp  strict_cap16_v3_frontend.hpp  tm_calibration.hpp  tm_cuda.hpp  tm_reference.hpp  tm_validation.hpp
native/include/tmgm/detail/: tm_training_semantics.hpp
native/src/: causal_resampler.cpp  cuda_smoke.cu  cuda_smoke_stub.cpp  dataset.cpp  ensemble_bundle.cpp  ensemble_inference.cpp  ensemble_predict_main.cpp  main.cpp  model.cpp  predict_main.cpp  strict_cap16_v3.cpp  strict_cap16_v3_frontend.cpp  tm_calibration.cpp  tm_cuda.cu  tm_reference.cpp  tm_validation.cpp  train_main.cpp
native/tests/: causal_resampler_test.cpp  cuda_inference_parity_test.cpp  dataset_loader_test.cpp  ensemble_bundle_test.cpp  ensemble_inference_test.cpp  ensemble_production_parity_test.cpp  model_test.cpp  strict_cap16_v3_frontend_parity_test.cpp  strict_cap16_v3_parity_test.cpp  tm_calibration_test.cpp  tm_output_order_test.cpp  tm_reference_test.cpp  tm_validation_test.cpp
plugin/: CMakeLists.txt  CleanroomAcousticFrontend.cpp  CleanroomAcousticFrontend.hpp  CleanroomAcousticFrontendFixture.tsv  CleanroomAcousticFrontendParityTest.cpp  EngineSmoke.cpp  HostSmoke.cpp  PluginProcessor.cpp  PluginProcessor.hpp  TmRealtimeEngine.cpp  TmRealtimeEngine.hpp
scripts/: audit_tmgmmod_literal_counts.py  evaluate_contiguous_tracks.py  evaluate_native_scores.py  evaluate_sampled_split.py  export_full_native.py  export_native_ensemble_bundle.py  export_one_track_native.py  export_strict_cap16_v3_frontend.py  export_wav_native.py  native_score_ensemble.py  prepare_cattack_v2_listening.py  prepare_complex_dataset_listening.py  prepare_contiguous_eval_manifest.py  prepare_multibank_cpu_listening.py  prepare_strict_cap16_v3_listening.py  render_corpus_pairs.py  render_native_scores.py  render_tm_tracker_complex6.py  repack_native_corpus.py  run_cattack_v2_listening.py  run_complex_dataset_listening.py  run_multibank_cpu_listening.py  run_native_ablation.py  run_offline_listening.py  run_strict_cap16_v3_listening.py  run_strict_cap_contiguous_confirmation.py  train_ensemble_large.ps1  train_one_track_overfit.py  upgrade_native_feature_contract.py
src/tmgm_rt/: __init__.py  audio.py  binarize.py  cli.py  config.py  context.py  contiguous_eval.py  corpus_eval.py  dataset.py  ensemble_train.py  feature_contract.py  feature_semantics.py  fusion_calibrate.py  metrics.py  midi.py  model.py  native_contract_upgrade.py  native_dataset.py  native_ensemble_bundle.py  native_export.py  native_repack.py  native_score_ensemble.py  native_score_eval.py  native_wav_export.py  nnpg.py  offline_listening.py  stft_plus.py  tracking.py
tests/: test_binarize.py  test_complex_dataset_listening.py  test_contiguous_eval.py  test_dataset_selection.py  test_ensemble.py  test_feature_contract.py  test_metrics.py  test_midi_writer.py  test_native_contract_upgrade.py  test_native_dataset.py  test_native_ensemble_bundle.py  test_native_export.py  test_native_repack.py  test_native_score_ensemble.py  test_native_score_eval.py  test_native_wav_export.py  test_nnpg.py  test_note_state.py  test_offline_listening.py  test_run_native_ablation.py  test_stft_streaming.py  test_strict_cap_contiguous_confirmation.py  test_tmu_backend.py  test_tracking.py
tools/neuralnote-teacher/: NeuralNoteBatch.cpp  README.md  neuralnote-teacher.patch
